
2010-02-21  Jérôme Laheurte  <jeromelaheurte@mac-mini-de-jerome-laheurte.local>
	* misc: Add Russian translation, thanks to Nikolay Parukhin

2009-12-27  Jérôme Laheurte  <jeromelaheurte@mac-mini-de-jerome-laheurte.local>
	* misc: Support for hierarchical tasks
	* misc: Support for basic effort tracking

2009-12-24  Jérôme Laheurte  <jeromelaheurte@mac-mini-de-jerome-laheurte.local>
	* misc: Support for multiple desktop files.

2009-12-22  Jérôme Laheurte  <jeromelaheurte@mac-mini-de-jerome-laheurte.local>
	* BadgedCell.m: Fix categories indentation level.

==== 1.2: 2009-12-16 ====

2009-10-19  Jérôme Laheurte  <jeromelaheurte@mac-mini-de-jerome-laheurte.local>
	* Now needs iPhone OS 3.0 at least.
	* misc: Add badges in the category view to show number of (not started/started/
	  due soon/overdue) tasks in this category.
	* misc: Allow landscape mode in task details view.
	* misc: Fix a bug when restoring the position at launch.

2009-09-20  Jérôme Laheurte  <jeromelaheurte@mac-mini-de-jerome-laheurte.local>
	* TaskDetailsController.m: Default due date is start date if there is one.

==== 1.1 beta 2: 2009-09-12 ====

2009-09-12  Jérôme Laheurte  <jeromelaheurte@mac-mini-de-jerome-laheurte.local>
	* TextFieldCell.xib: increase font size.
	* misc: enhance French translation for settings bundle; add spaces at the end
	  of the string so that the value does not appear to be part of the label.

==== 1.1 beta 1: 2009-09-06 ====

2009-08-24  Jérôme Laheurte  <jeromelaheurte@mac-mini-de-jerome-laheurte.local>
	* nl.lproj/: Added Dutch translation.
	* misc: Make the "Add subcategory" cell labels gray, it's more readable this
	  way.

2009-08-23  Jérôme Laheurte  <jeromelaheurte@mac-mini-de-jerome-laheurte.local>
	* misc: support for editing categories and creating categories with parents

2009-08-16  Jérôme Laheurte  <jeromelaheurte@mac-mini-de-jerome-laheurte.local>
	* misc: Tasks are not due "tomorrow" anymore, but "soon", i.e. due in at most